
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ uint8_t ;
typedef scalar_t__ uint16_t ;
typedef int smb_header ;
struct TYPE_2__ {unsigned char format; int * name; } ;


 unsigned char SESSION_MESSAGE ;
 int SMB_NEGOTIATE_PROTOCOL ;
 scalar_t__ bswap16 (scalar_t__) ;
 int build_smb_header (int *,int ,int ,int ,int ,scalar_t__,int ,scalar_t__) ;
 TYPE_1__* dialects ;
 int memcpy (unsigned char*,int *,int) ;
 scalar_t__ rand () ;
 int strcpy (unsigned char*,int *) ;
 scalar_t__ strlen (int *) ;
 int write (int,unsigned char*,int) ;

void
negotiate_protocol (unsigned char *buffer, int fd)
{
  smb_header hdr;
  unsigned char *p;
  uint16_t proc_id, mpex_id;
  int i;

  proc_id = (uint16_t) rand ();
  mpex_id = (uint16_t) rand ();

  buffer[0] = SESSION_MESSAGE;
  buffer[1] = 0x0;

  build_smb_header (&hdr, SMB_NEGOTIATE_PROTOCOL, 0, 0, 0, proc_id, 0,
                    mpex_id);

  memcpy (buffer + 4, &hdr, sizeof (smb_header));

  p = buffer + 4 + sizeof (smb_header) + 3;

  for (i = 0; dialects[i].name != ((void*)0); i++)
    {
      *p = dialects[i].format;
      strcpy (p + 1, dialects[i].name);
      p += strlen (dialects[i].name) + 2;
    }


  *(uint8_t *) (buffer + 4 + sizeof (smb_header)) = 0;


  *(uint16_t *) (buffer + 4 + sizeof (smb_header) + 1) =
    (uint16_t) (p - buffer - 4 - sizeof (smb_header) - 3);

  *(uint16_t *) (buffer + 2) = bswap16 ((uint16_t) (p - buffer - 4));

  write (fd, buffer, p - buffer);

}
